# design-patterns

./: pyproject.toml
behavioral/: 01-chain-of-responsability.py  02-command.py  03-iterator.py  04-mediator.py  05-memento.py  06-observer.py  07-state.py  08-strategy.py  09-template-method.py  10-visitor.py
creational/: 01-factory-method.py  02-abstract-factory.py  03-builder.py  04-prototype.py  05-singleton.py
structural/: 01-adapter.py  02-bridge.py  03-composite.py  04-decorator.py  05-facade.py  06-flyweight  07-proxy.py
