[tool.poetry]
name = "design-patterns"
version = "0.0.1"
description = "Design Patterns"
authors = ["Gabriel Nogueira <gabrielmvnogueira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
